option java_package = "se.cygni.stacktrace.protows";
option java_outer_classname = "UserAccountProtos";

message UserAccount {
    required int32 id = 1;
    required string user_name = 2;
    optional string email = 3;
  
  	enum AccountState {
        ACTIVE = 0;
        PENDING_TANDC = 1;
        SUSPENDED = 2;
    }  	

    required AccountState state = 4;
    repeated string service = 5;
}



